--- a/index.html
+++ b/index.html
@@ -12,23 +12,22 @@
     <!--Header Area-->
     <header class="header-area">
         <!--Header Top-->
-        <section class="header-top">
+        <section class="header-top container">
             <!--Logo-->
             <div class="logo">
                 <a href="">G3 Architects</a>
             </div>
 
-            <!--Primary Menu-->
-            <div class="primary-menu">
-                <nav>
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact Us</a></li>
-                        <li><a href="">Login</a></li>                        
-                    </ul>
-                </nav>
-            </div><!--/ Primary Menu-->
+            <!--Primary Menu-->            
+            <nav class="primary-menu"> 
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Login</a></li>                        
+                </ul>
+            </nav><!--/ Primary Menu-->
+            
         </section> <!--/ Header Top-->
 
         <!--Header Bottom-->
