--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!--Quick list Area-->
         <section class="quick-list-area">
-            <div class="quick-list">
+            <div class="quick-list container">
                 <div class="quick-list-left">
                     <img src="images/team1.png" alt="">
                     <img src="images/team2.png" alt="">
@@ -57,7 +57,7 @@
                 </div>
                 <div class="quick-list-right">
                     <div class="quick-list-content">
-                        <h2>Quick list <span> of Our</span> <span> Features</span></h2>
+                        <h2><span class="thin-word">Quick list </span> of Our <br> <span> Features</span></h2>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                         <button class="primary-button">Explore More</button>
                     </div>
