--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
         <!--Feature Area-->
         <section class="features-area">
-            <div class="features">
+            <div class="features container">
 
                 <!--Feature Left-->
                 <div class="features-left">
-                    <div class="feature-heading">
+                    <div class="feature-heading section-title">
                         <h2>Features you will love & enjoy</h2>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                     </div>
@@ -100,12 +100,10 @@
                 </div><!--/ Feature Left-->
 
                 <!--Feature Right-->
-                <div class="features-right">
-                    <div class="feature-image">
-                        <img src="images/architect.png" alt="">
-                    </div>
+                <div class="features-right">                   
+                    <img src="images/architect.png" alt="">                    
                     <div class="feature-image-footer">
-                        <h2>10+ Year</h2>
+                        <h3>10+ Year</h3>
                         <p>Experience</p>
                     </div>
                 </div><!--/ Feature Left-->
