--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <img src="images/team4.png" alt="">
                 </div>
                 <div class="quick-list-right">
-                    <div class="quick-list-content">
+                    <div class="quick-list-content section-title">
                         <h2><span class="thin-word">Quick list </span> of Our <br> <span> Features</span></h2>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                         <button class="primary-button">Explore More</button>
@@ -72,7 +72,7 @@
                 <!--Feature Left-->
                 <div class="features-left">
                     <div class="feature-heading section-title">
-                        <h2>Features you will love & enjoy</h2>
+                        <h2>Features you will<br>love & enjoy</h2>
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                     </div>
                     <div class="feature-list-area">
@@ -113,8 +113,8 @@
 
         <!--Some Facts Area-->
         <section class="some-facts-area">
-            <div class="some-facts">
-                <div class="some-facts-heading">
+            <div class="some-facts container">
+                <div class="some-facts-heading section-title">
                     <h2>Some Facts</h2>
                     <p>
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
@@ -127,29 +127,29 @@
                     <!--Single Fact-->
                     <div class="single-fact">
                         <img src="images/icons/ribon.png" alt="">
-                        <h2>54</h2>
-                        <h3>Awards Winnings</h3>
+                        <h3>54</h3>
+                        <p>Awards Winnings</p>
                     </div><!--/ Single Fact-->
 
                     <!--Single Fact-->
                     <div class="single-fact">
                         <img src="images/icons/projects.png" alt="">
-                        <h2>1458</h2>
-                        <h3>Project Finished</h3>
+                        <h3>1458</h3>
+                        <p>Project Finished</p>
                     </div><!--/ Single Fact-->
 
                     <!--Single Fact-->
                     <div class="single-fact">
                         <img src="images/icons/customers.png" alt="">
-                        <h2>590</h2>
-                        <h3>Clients Worked</h3>
+                        <h3>590</h3>
+                        <p>Clients Worked</p>
                     </div><!--/ Single Fact-->
 
                     <!--Single Fact-->
                     <div class="single-fact">
                         <img src="images/icons/email.png" alt="">
-                        <h2>22578</h2>
-                        <h3>Email Send</h3>
+                        <h3>22578</h3>
+                        <p>Email Send</p>
                     </div><!--/ Single Fact-->
                 </div><!--/ Facts List-->
             </div>
@@ -158,20 +158,69 @@
 
         <!--Our Sponsors-->
         <section class="our-sponsors-area">
-            <div class="our-sponsors">
-                <img src="images/sponsors/spotify.png" alt="">
-                <img src="images/sponsors/amazon.png" alt="">
-                <img src="images/sponsors/google.png" alt="">
-                <img src="images/sponsors/telerama.png" alt="">
-                <img src="images/sponsors/figma.png" alt="">
+            <div class="our-sponsors container">
+                <!-- Sponsors Heading  -->
+				<div class="sponsors-heading section-title">
+					<h2>Our Sponsors</h2>
+					<P>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</P>
+				</div>
+                <div class="sponsors-logo">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
+
             </div>
         </section><!--Our Sponsors-->
+
+
+		<!--Contact Area-->
+		<section class="contact-area">
+			<div class="contact container">
+				<div class="contact-heading section-title">
+					<h2>LEAVE ME A MESSAGE</h2>
+				</div>
+
+				<div class="contact-content-area">
+                    <!--Contact Form-->
+                    <div class="contact-form">
+                        <form>
+                            <input type="text" placeholder="Name" required/>
+                            <input type="email" placeholder="Email" required/>
+                            <textarea rows="8" cols="50" placeholder="Message" required></textarea>
+                            <input type="submit" value="Send Message" />
+                        </form>                    
+                    </div><!-- /.Contact Form -->
+                    
+                    <!--Contact Address-->
+                    <div class="contact-address">
+                        <div class="contact-phone">
+                            <i class="fa-solid fa-phone"></i>
+                            <p>Phone: +98 74563210</p>
+                        </div>
+                        <div class="contact-email">
+                            <i class="fa-solid fa-envelope"></i>
+                            <p>contact@email.com</p>						
+                        </div>
+                        <div class="contact-add">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <p>Address: Bak-One Company<br/>12345 Hollywood Bvld Street<br/>Los Angeles, California</p>
+                        </div>
+                    </div><!-- /.Contact Address -->
+
+                </div>
+
+			</div>            
+		</section><!-- /.Contact Area -->
+
     </main><!--/Main Area-->
 
     <!--Footer Area-->
     <footer class="footer-area">
-        <section class="footer">
-            
+        <section class="footer container">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
         </section>
     </footer><!--/ Footer Area-->
 </body>
