--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects Assignment</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
 
@@ -47,8 +48,8 @@
     <main>
 
         <!--Quick list Area-->
-        <section class="quick-list-area">
-            <div class="quick-list container">
+        <section class="quick-list-area container">
+            <div class="quick-list">
                 <div class="quick-list-left">
                     <img src="images/team1.png" alt="">
                     <img src="images/team2.png" alt="">
@@ -66,8 +67,8 @@
         </section><!--/ Quick list Area-->
 
         <!--Feature Area-->
-        <section class="features-area">
-            <div class="features container">
+        <section class="features-area container">
+            <div class="features">
 
                 <!--Feature Left-->
                 <div class="features-left">
@@ -112,8 +113,8 @@
 
 
         <!--Some Facts Area-->
-        <section class="some-facts-area">
-            <div class="some-facts container">
+        <section class="some-facts-area container">
+            <div class="some-facts">
                 <div class="some-facts-heading section-title">
                     <h2>Some Facts</h2>
                     <p>
@@ -157,8 +158,8 @@
 
 
         <!--Our Sponsors-->
-        <section class="our-sponsors-area">
-            <div class="our-sponsors container">
+        <section class="our-sponsors-area container">
+            <div class="our-sponsors">
                 <!-- Sponsors Heading  -->
 				<div class="sponsors-heading section-title">
 					<h2>Our Sponsors</h2>
@@ -177,8 +178,8 @@
 
 
 		<!--Contact Area-->
-		<section class="contact-area">
-			<div class="contact container">
+		<section class="contact-area container">
+			<div class="contact">
 				<div class="contact-heading section-title">
 					<h2>LEAVE ME A MESSAGE</h2>
 				</div>
