responsive issue fix

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
     </main><!--/Main Area-->
 
     <!--Footer Area-->
-    <footer class="footer-area">
-        <section class="footer container">
+    <footer class="footer-area container">
+        <section class="footer">
             <p>All rights reserved copyright@2023 startup landing page design</p>
         </section>
     </footer><!--/ Footer Area-->
