footer container move

--- a/index.html
+++ b/index.html
@@ -219,10 +219,13 @@
     </main><!--/Main Area-->
 
     <!--Footer Area-->
-    <footer class="footer-area container">
-        <section class="footer">
-            <p>All rights reserved copyright@2023 startup landing page design</p>
+    <footer class="footer-area">
+        <section class="container">
+            <div class="footer">
+                <p>All rights reserved copyright@2023 startup landing page design</p>
+            </div>
         </section>
+       
     </footer><!--/ Footer Area-->
 </body>
 </html>
