single sponsor fix

--- a/index.html
+++ b/index.html
@@ -158,21 +158,42 @@
 
 
         <!--Our Sponsors-->
-        <section class="our-sponsors-area container">
-            <div class="our-sponsors">
-                <!-- Sponsors Heading  -->
-				<div class="sponsors-heading section-title">
-					<h2>Our Sponsors</h2>
-					<P>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</P>
-				</div>
-                <div class="sponsors-logo">
-                    <img src="images/sponsors/spotify.png" alt="">
-                    <img src="images/sponsors/amazon.png" alt="">
-                    <img src="images/sponsors/google.png" alt="">
-                    <img src="images/sponsors/telerama.png" alt="">
-                    <img src="images/sponsors/figma.png" alt="">
-                </div>
+        <section class="our-sponsors-area">
+            <div class="container">
+                <div class="our-sponsors">
+                    <!-- Sponsors Heading  -->
+                    <div class="sponsors-heading section-title">
+                        <h2>Our Sponsors</h2>
+                        <P>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</P>
+                    </div>
+                    <div class="sponsors-logo">
 
+                        <!--Single Sponsor-->
+                        <div class="single-sponsor-logo">
+                            <img src="images/sponsors/spotify.png" alt="">
+                        </div>
+
+                         <!--Single Sponsor-->
+                        <div class="single-sponsor-logo">
+                            <img src="images/sponsors/amazon.png" alt="">
+                        </div>
+
+                         <!--Single Sponsor-->
+                        <div class="single-sponsor-logo">
+                            <img src="images/sponsors/google.png" alt="">
+                        </div>
+
+                         <!--Single Sponsor-->
+                        <div class="single-sponsor-logo">
+                            <img src="images/sponsors/telerama.png" alt="">
+                        </div>
+                         <!--Single Sponsor-->
+                        <div class="single-sponsor-logo">
+                            <img src="images/sponsors/figma.png" alt="">
+                        </div>  
+                        
+                    </div>
+                </div>
             </div>
         </section><!--Our Sponsors-->
 
